docs(stage2): make v1.1 modified version standalone\n\n- replace placeholders with full implementation details\n- ensure all steps include complete code and criteria

--- a/开发指导/02-UI框架和样式系统搭建-修改版.md
+++ b/开发指导/02-UI框架和样式系统搭建-修改版.md
@@ -299,47 +299,636 @@ export const BREAKPOINTS = {
 
 ### 步骤 2.3：创建基础UI组件 - Button
 
-（内容与原始阶段2文档一致，此处省略重复实现细节，保留完整代码段以保证可复现性）
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 使用clsx和tailwind-merge工具库，避免重复实现
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先实现可工作的按钮组件，后续可扩展更多variant
+
+**创建 src/components/Button/Button.tsx**:
 
 ```typescript
-// 参考原始文档中的 Button 组件实现与测试用例
+import React from 'react';
+import { cn } from '@/utils/cn';
+
+export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
+  variant?: 'primary' | 'secondary' | 'ghost';
+  size?: 'sm' | 'md' | 'lg';
+  isLoading?: boolean;
+  leftIcon?: React.ReactNode;
+  rightIcon?: React.ReactNode;
+}
+
+/**
+ * Button 组件
+ * 遵循命名约定：组件名使用 PascalCase
+ */
+export const Button: React.FC<ButtonProps> = ({
+  variant = 'primary',
+  size = 'md',
+  isLoading = false,
+  leftIcon,
+  rightIcon,
+  children,
+  className,
+  disabled,
+  ...props
+}) => {
+  const baseStyles = 'inline-flex items-center justify-center rounded-lg font-medium transition-all';
+  
+  const variantStyles = {
+    primary: 'bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700',
+    secondary: 'bg-white/20 backdrop-blur text-blue-900 hover:bg-white/30',
+    ghost: 'bg-transparent text-blue-600 hover:bg-blue-50',
+  };
+  
+  const sizeStyles = {
+    sm: 'px-3 py-1.5 text-sm',
+    md: 'px-4 py-2 text-base',
+    lg: 'px-6 py-3 text-lg',
+  };
+
+  return (
+    <button
+      className={cn(
+        baseStyles,
+        variantStyles[variant],
+        sizeStyles[size],
+        disabled && 'opacity-50 cursor-not-allowed',
+        className
+      )}
+      disabled={disabled || isLoading}
+      {...props}
+    >
+      {isLoading ? (
+        <span className="inline-block w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin mr-2" />
+      ) : leftIcon ? (
+        <span className="mr-2">{leftIcon}</span>
+      ) : null}
+      {children}
+      {rightIcon && <span className="ml-2">{rightIcon}</span>}
+    </button>
+  );
+};
 ```
+
+**创建 src/components/Button/index.ts**:
+
+```typescript
+export { Button } from './Button';
+export type { ButtonProps } from './Button';
+```
+
+**创建工具函数 src/utils/cn.ts**:
+
+```typescript
+import { type ClassValue, clsx } from 'clsx';
+import { twMerge } from 'tailwind-merge';
+
+/**
+ * 合并 Tailwind CSS 类名的工具函数
+ * 遵循命名约定：函数名使用 camelCase
+ */
+export function cn(...inputs: ClassValue[]) {
+  return twMerge(clsx(inputs));
+}
+```
+
+**安装依赖**:
+
+```powershell
+npm install clsx tailwind-merge
+```
+
+**验收标准**:
+- [ ] 组件名使用 PascalCase（约定6：Button组件命名）
+- [ ] 函数名使用 camelCase（约定2：cn函数命名）
+- [ ] 组件功能完整（规则1：可立即使用，无TODO）
+- [ ] 类型定义正确（规则1：包含完整的ButtonProps接口）
+- [ ] 复用现有工具库（规则2：使用clsx和tailwind-merge）
+- [ ] 代码可正常编译（规则10：无编译错误）
 
 ### 步骤 2.4：创建基础UI组件 - Card
 
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - Card组件使用PascalCase命名
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的Card组件实现，无占位符
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用cn工具函数进行类名合并
+
+**创建 src/components/Card/Card.tsx**:
+
 ```typescript
-// 参考原始文档中的 Card 组件实现
+import React from 'react';
+import { cn } from '@/utils/cn';
+
+export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
+  variant?: 'default' | 'glass' | 'elevated';
+  hoverable?: boolean;
+  padding?: 'none' | 'sm' | 'md' | 'lg';
+}
+
+/**
+ * Card 卡片组件
+ * 支持毛玻璃效果和悬停动画
+ */
+export const Card: React.FC<CardProps> = ({
+  variant = 'glass',
+  hoverable = true,
+  padding = 'md',
+  className,
+  children,
+  ...props
+}) => {
+  const baseStyles = 'rounded-2xl transition-all duration-300';
+  
+  const variantStyles = {
+    default: 'bg-white shadow-card',
+    glass: 'bg-white/40 backdrop-blur-md shadow-glass',
+    elevated: 'bg-white shadow-elevated',
+  };
+  
+  const paddingStyles = {
+    none: '',
+    sm: 'p-3',
+    md: 'p-4',
+    lg: 'p-6',
+  };
+
+  const hoverStyles = hoverable 
+    ? 'hover:-translate-y-1 hover:shadow-card-hover cursor-pointer'
+    : '';
+
+  return (
+    <div
+      className={cn(
+        baseStyles,
+        variantStyles[variant],
+        paddingStyles[padding],
+        hoverStyles,
+        className
+      )}
+      {...props}
+    >
+      {children}
+    </div>
+  );
+};
 ```
+
+**创建 src/components/Card/index.ts**:
+
+```typescript
+export { Card } from './Card';
+export type { CardProps } from './Card';
+```
+
+**验收标准**:
+- [ ] 毛玻璃效果正常（原型设计：backdrop-filter规范）
+- [ ] 悬停动画流畅（规则1：完整实现）
+- [ ] 组件可复用（规则2：可被其他模块导入使用）
+- [ ] 组件命名符合规范（约定6：PascalCase）
 
 ### 步骤 2.5：创建图标组件系统
 
-```typescript
-// 参考原始文档中的 Icon 组件实现
+**适用规范**: 
+- 开发需求规范 [规则 13] 只使用真实存在的库 → 第199行
+  - 使用经过验证的lucide-react图标库
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - Icon组件使用PascalCase命名
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的Icon组件包括类型定义
+
+**安装 Lucide React**:
+
+```powershell
+# Lucide React - 基于 Context7 验证的真实库
+npm install lucide-react
 ```
+
+**创建 src/components/Icon/Icon.tsx**:
+
+```typescript
+import React from 'react';
+import * as LucideIcons from 'lucide-react';
+import { cn } from '@/utils/cn';
+
+export type IconName = keyof typeof LucideIcons;
+
+export interface IconProps {
+  name: IconName;
+  size?: number | string;
+  color?: string;
+  className?: string;
+  strokeWidth?: number;
+}
+
+/**
+ * Icon 图标组件
+ * 基于 Lucide React 图标库
+ */
+export const Icon: React.FC<IconProps> = ({
+  name,
+  size = 24,
+  color,
+  className,
+  strokeWidth = 2,
+}) => {
+  const IconComponent = LucideIcons[name] as React.ComponentType<any>;
+  
+  if (!IconComponent) {
+    console.warn(`Icon "${name}" not found`);
+    return null;
+  }
+
+  return (
+    <IconComponent
+      size={size}
+      color={color}
+      strokeWidth={strokeWidth}
+      className={cn('inline-block', className)}
+    />
+  );
+};
+```
+
+**创建 src/components/Icon/index.ts**:
+
+```typescript
+export { Icon } from './Icon';
+export type { IconProps, IconName } from './Icon';
+```
+
+**验收标准**:
+- [ ] 图标库正确安装（规则13：使用真实存在的库lucide-react）
+- [ ] 图标可以正常显示（规则1：完整可运行）
+- [ ] 支持自定义大小和颜色（规则1：无占位符，功能完整）
+- [ ] 组件命名符合规范（约定6：Icon使用PascalCase）
 
 ### 步骤 2.6：创建组件库索引
 
+**适用规范**: 
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 创建统一导出文件便于其他模块复用组件
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 导出所有类型定义，确保类型安全
+- 命名约定 [约定 5] 文件命名 (kebab-case) → 第154行
+  - 使用index.ts作为模块入口文件
+
+**创建 src/components/index.ts**:
+
 ```typescript
-// 参考原始文档中的 components/index.ts 实现
+/**
+ * 组件库统一导出
+ * 便于其他模块导入使用
+ */
+
+export { Button } from './Button';
+export type { ButtonProps } from './Button';
+
+export { Card } from './Card';
+export type { CardProps } from './Card';
+
+export { Icon } from './Icon';
+export type { IconProps, IconName } from './Icon';
+
+// 后续添加更多组件...
 ```
+
+**验收标准**:
+- [ ] 所有组件统一导出（规则2：便于复用）
+- [ ] 类型定义正确导出（规则1：完整可运行）
+- [ ] 导入路径简洁（规则2：使用@/components统一导入）
 
 ### 步骤 2.7：创建布局组件
 
+**适用规范**: 
+- 命名约定 [约定 6] 组件命名 (PascalCase) → 第190行
+  - AppContainer、Header组件使用PascalCase
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - 事件处理函数使用camelCase（onRefresh、onSettings）
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 布局组件功能完整，包含所有必要属性
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用Icon组件和cn工具函数
+
+**创建 src/components/Layout/AppContainer.tsx**:
+
 ```typescript
-// 参考原始文档中的 AppContainer 与 Header 实现
+import React from 'react';
+import { cn } from '@/utils/cn';
+
+export interface AppContainerProps {
+  children: React.ReactNode;
+  className?: string;
+}
+
+/**
+ * AppContainer 应用容器组件
+ * 提供统一的应用外层布局
+ */
+export const AppContainer: React.FC<AppContainerProps> = ({
+  children,
+  className,
+}) => {
+  return (
+    <div className={cn('app-container', className)}>
+      {children}
+    </div>
+  );
+};
 ```
+
+**创建 src/components/Layout/Header.tsx**:
+
+```typescript
+import React from 'react';
+import { cn } from '@/utils/cn';
+import { Icon } from '@/components/Icon';
+
+export interface HeaderProps {
+  title?: string;
+  subtitle?: string;
+  onRefresh?: () => void;
+  onSettings?: () => void;
+  className?: string;
+}
+
+/**
+ * Header 标题栏组件
+ * 包含应用标题和操作按钮
+ */
+export const Header: React.FC<HeaderProps> = ({
+  title = '天气鸭',
+  subtitle = '智能天气助手',
+  onRefresh,
+  onSettings,
+  className,
+}) => {
+  return (
+    <header 
+      className={cn(
+        'bg-gradient-to-r from-blue-500 to-blue-400',
+        'py-4 px-6 flex justify-between items-center',
+        'h-14 flex-shrink-0',
+        className
+      )}
+    >
+      <div className="flex items-center space-x-3">
+        <div className="text-2xl">🦆</div>
+        <div>
+          <h1 className="text-white text-xl font-bold tracking-wider">
+            {title}
+          </h1>
+          <p className="text-blue-100 text-xs">{subtitle}</p>
+        </div>
+      </div>
+      
+      <div className="flex space-x-2">
+        {onRefresh && (
+          <button
+            onClick={onRefresh}
+            className="flex items-center justify-center w-9 h-9 rounded-full bg-white/20 hover:bg-white/30 transition"
+            aria-label="刷新天气"
+          >
+            <Icon name="RefreshCw" size={18} color="white" />
+          </button>
+        )}
+        
+        {onSettings && (
+          <button
+            onClick={onSettings}
+            className="flex items-center justify-center w-9 h-9 rounded-full bg白色/20 hover:bg白色/30 transition"
+            aria-label="打开设置"
+          >
+            <Icon name="Settings" size={18} color="white" />
+          </button>
+        )}
+      </div>
+    </header>
+  );
+};
+```
+
+**创建 src/components/Layout/index.ts**:
+
+```typescript
+export { AppContainer } from './AppContainer';
+export type { AppContainerProps } from './AppContainer';
+
+export { Header } from './Header';
+export type { HeaderProps } from './Header';
+```
+
+**验收标准**:
+- [ ] 布局组件功能完整（规则1：完整可运行）
+- [ ] 响应式设计正确（原型设计：375x812px规范）
+- [ ] 按钮交互正常（约定2：事件处理函数使用camelCase）
+- [ ] 组件命名符合规范（约定6：AppContainer、Header使用PascalCase）
 
 ### 步骤 2.8：更新主应用组件
 
+**适用规范**: 
+- 开发需求规范 [规则 1] 生成完整可运行代码 → 第20行
+  - 提供完整的App.tsx实现，可立即运行
+- 开发需求规范 [规则 2] 复用现有代码和API → 第48行
+  - 复用已创建的所有UI组件（AppContainer、Header、Card、Button、Icon）
+- 开发需求规范 [规则 9] 功能优先于完美 → 第163行
+  - 先展示基础UI结构，后续迭代完善功能
+- 命名约定 [约定 2] 函数命名 (camelCase) → 第54行
+  - handleRefresh、handleSettings使用camelCase
+
+**更新 src/App.tsx**:
+
 ```typescript
-// 参考原始文档中的 App.tsx 实现
+import React, { useState } from 'react';
+import { AppContainer, Header } from '@/components/Layout';
+import { Card } from '@/components/Card';
+import { Button } from '@/components/Button';
+import { Icon } from '@/components/Icon';
+
+function App() {
+  const [isRefreshing, setIsRefreshing] = useState(false);
+
+  const handleRefresh = () => {
+    setIsRefreshing(true);
+    console.log('刷新天气数据...');
+    
+    // 模拟刷新
+    setTimeout(() => {
+      setIsRefreshing(false);
+    }, 1000);
+  };
+
+  const handleSettings = () => {
+    console.log('打开设置面板...');
+  };
+
+  return (
+    <AppContainer>
+      <Header 
+        onRefresh={handleRefresh}
+        onSettings={handleSettings}
+      />
+      
+      <main className="flex-1 overflow-y-auto p-5">
+        <Card variant="glass" className="mb-5">
+          <h2 className="text-xl font-bold text-blue-900 mb-2">
+            UI 框架搭建完成
+          </h2>
+          <p className="text-blue-600 mb-4">
+            Tailwind CSS 和基础组件库已就绪
+          </p>
+          
+          <div className="space-y-3">
+            <Button 
+              variant="primary" 
+              leftIcon={<Icon name="Cloud" size={18} />}
+              isLoading={isRefreshing}
+            >
+              刷新天气
+            </Button>
+            
+            <Button variant="secondary">
+              次要按钮
+            </Button>
+            
+            <Button variant="ghost">
+              幽灵按钮
+            </Button>
+          </div>
+        </Card>
+        
+        <div className="grid grid-cols-2 gap-3">
+          <Card hoverable>
+            <div className="text-center">
+              <Icon name="Droplets" size={32} color="#3b82f6" />
+              <div className="mt-2 text-sm text-blue-600">湿度</div>
+              <div className="text-xl font-bold text-blue-900">62%</div>
+            </div>
+          </Card>
+          
+          <Card hoverable>
+            <div className="text-center">
+              <Icon name="Wind" size={32} color="#3b82f6" />
+              <div className="mt-2 text-sm text蓝色-600">风速</div>
+              <div className="text-xl font-bold text蓝色-900">18km/h</div>
+            </div>
+          </Card>
+        </div>
+      </main>
+    </AppContainer>
+  );
+}
+
+export default App;
 ```
+
+**验收标准**:
+- [ ] 应用正常显示（规则1：完整可运行）
+- [ ] 所有组件正常工作（规则2：成功复用Button、Card、Icon等组件）
+- [ ] 动画效果流畅（原型设计：fadeIn动画规范）
+- [ ] 交互响应正常（约定2：handleRefresh等函数使用camelCase）
+- [ ] 代码无编译错误（规则10：确保代码成功编译）
 
 ### 步骤 2.9：编写组件测试
 
-```typescript
-// 参考原始文档中的 Vitest 配置与 Button 测试用例
+**适用规范**: 
+- 测试规范 [规则 1] 测试完整性 → 第20行
+  - 新增Button组件必须包含单元测试
+- 测试规范 [规则 5] 测试命名约定 → 第127行
+  - 测试文件使用.test.tsx后缀，用例描述清晰
+- 测试规范 [规则 7] 边界条件测试 → 第186行
+  - 测试disabled和loading等边界状态
+- 测试规范 [规则 8] 测试隔离性 → 第215行
+  - 每个测试用例独立运行，互不影响
+
+**安装测试依赖**:
+
+```powershell
+npm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom
 ```
+
+**创建测试配置 vitest.config.ts**:
+
+```typescript
+import { defineConfig } from 'vitest/config';
+import react from '@vitejs/plugin-react';
+import path from 'path';
+
+export default defineConfig({
+  plugins: [react()],
+  test: {
+    environment: 'jsdom',
+    setupFiles: ['./src/test/setup.ts'],
+    globals: true,
+  },
+  resolve: {
+    alias: {
+      '@': path.resolve(__dirname, './src'),
+    },
+  },
+});
+```
+
+**创建测试设置 src/test/setup.ts**:
+
+```typescript
+import '@testing-library/jest-dom';
+```
+
+**创建 Button 组件测试 src/components/Button/Button.test.tsx**:
+
+```typescript
+import { describe, it, expect, vi } from 'vitest';
+import { render, screen } from '@testing-library/react';
+import userEvent from '@testing-library/user-event';
+import { Button } from './Button';
+
+describe('Button', () => {
+  it('should render button with text', () => {
+    render(<Button>Click me</Button>);
+    expect(screen.getByText('Click me')).toBeInTheDocument();
+  });
+
+  it('should call onClick when clicked', async () => {
+    const handleClick = vi.fn();
+    const user = userEvent.setup();
+    
+    render(<Button onClick={handleClick}>Click me</Button>);
+    
+    await user.click(screen.getByText('Click me'));
+    expect(handleClick).toHaveBeenCalledOnce();
+  });
+
+  it('should be disabled when disabled prop is true', () => {
+    render(<Button disabled>Click me</Button>);
+    expect(screen.getByRole('button')).toBeDisabled();
+  });
+
+  it('should show loading state', () => {
+    render(<Button isLoading>Click me</Button>);
+    expect(screen.getByRole('button')).toBeDisabled();
+  });
+});
+```
+
+**运行测试**:
+
+```powershell
+npm run test
+```
+
+**验收标准**:
+- [ ] 测试文件使用 .test.tsx 后缀（规则5：测试命名约定）
+- [ ] 测试用例描述清晰（规则5：使用"should + 预期行为"格式）
+- [ ] 所有测试通过（规则1：测试完整性）
+- [ ] 测试覆盖核心功能（规则7：包含正常、disabled、loading等场景）
+- [ ] 测试相互隔离（规则8：每个测试独立运行）
 
 ---
 
