feat(ui): 集成 Tailwind 与基础组件\n\n- 添加 tailwind/postcss 配置\n- 创建 Button/Card/Icon/Layout 组件\n- 更新 App 结构\n- 引入 Vitest 与 Testing Library 并通过单元测试\n- 更新阶段1与阶段2文档以保持一致性\n\nRefs: #phase2 #ui-framework

--- a/开发指导/01-项目初始化指南.md
+++ b/开发指导/01-项目初始化指南.md
@@ -742,6 +742,37 @@ npm install
 - **阶段2：UI 框架和样式系统搭建**
 - **阶段3：核心功能实现**
 
+### 步骤 1.10：集成样式系统与测试栈（与阶段2保持一致）
+
+**适用规范**: 
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 3] 最小化新增依赖
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 10] 确保代码成功编译
+- `.qoder/rules/requirements-spec.zh-CN.md` - [规则 13] 只使用真实存在的库
+
+**使用 cnpm 安装依赖**:
+
+```powershell
+cnpm install -D tailwindcss@3 postcss autoprefixer ; npx tailwindcss init -p
+cnpm install clsx tailwind-merge
+cnpm install lucide-react
+cnpm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom
+```
+
+**新增/更新文件**:
+- `tailwind.config.js`：启用 `darkMode: 'class'`，`content` 指向 `index.html` 与 `src/**/*.{ts,tsx}`
+- `postcss.config.js`：注册 `tailwindcss` 与 `autoprefixer`
+- `src/index.css`：加入 `@tailwind base/components/utilities` 与自定义 `@layer`
+- `vitest.config.ts` 与 `src/test/setup.ts`：启用 `jsdom` 与覆盖率
+
+**验证命令**:
+
+```powershell
+npm run typecheck ; npm run lint ; npm run test ; npm run dev:web
+```
+
+**说明**:
+- 以上安装命令使用 `cnpm`，其余运行脚本与阶段1保持一致；如本机未安装 `cnpm`，请先安装或切换为 `npm`
+
 ---
 
 ---
