--- a/开发指导/02-UI框架和样式系统搭建-修改版.md
+++ b/开发指导/02-UI框架和样式系统搭建-修改版.md
@@ -86,10 +86,7 @@
 
 ```powershell
 # 安装 Tailwind CSS（基于 Context7 验证：信任分数10分）
-npm install -D tailwindcss@3 postcss autoprefixer
-
-# 初始化 Tailwind 配置
-npx tailwindcss init -p
+cnpm install -D tailwindcss@3 postcss autoprefixer ; npx tailwindcss init -p
 ```
 
 **配置 tailwind.config.js**:
@@ -97,10 +94,15 @@ npx tailwindcss init -p
 ```javascript
 /** @type {import('tailwindcss').Config} */
 export default {
+  // 优化依据：Tailwind 官方推荐使用精准 content 路径以减少生成体积
+  // 参考：Tailwind CSS Docs - Configuration/Content paths（Context7: /tailwindlabs/tailwindcss.com）
   content: [
     "./index.html",
-    "./src/**/*.{js,ts,jsx,tsx}",
+    "./src/**/*.{ts,tsx}",
   ],
+  // 优化依据：暗色模式采用 class 策略，便于在 React/Vite/Electron 环境中按需切换
+  // 参考：Dark mode（Context7: /tailwindlabs/tailwindcss.com）
+  darkMode: 'class',
   theme: {
     extend: {
       colors: {
@@ -142,6 +144,11 @@ export default {
         'card': '0 4px 12px rgba(6, 132, 255, 0.08)',
         'card-hover': '0 8px 22px rgba(6, 132, 255, 0.18)',
       },
+      // 扩展 400ms 时长以支持文中 `duration-400` 用法
+      // 参考：Tailwind 配置扩展（Context7: /tailwindlabs/tailwindcss.com）
+      transitionDuration: {
+        400: '400ms',
+      },
       animation: {
         'fade-in': 'fadeIn 0.6s cubic-bezier(0.22, 0.61, 0.36, 1)',
         'slide-up': 'slideUp 0.4s cubic-bezier(0.22, 0.61, 0.36, 1)',
@@ -182,8 +189,10 @@ export default {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
   }
 
+  /* 优化依据：Tailwind 使用 ease-[...] 指定缓动；避免错误的 transition-timing-* 名称 */
+  /* 参考：Tailwind 配置与任意值（Context7: /tailwindlabs/tailwindcss.com） */
   * {
-    @apply transition-timing-[cubic-bezier(0.22,0.61,0.36,1)];
+    @apply ease-[cubic-bezier(0.22,0.61,0.36,1)];
   }
 }
 
@@ -230,6 +239,8 @@ export default {
 /**
  * 设计令牌 - 集中管理设计系统的基础值
  * 遵循命名约定：UPPER_SNAKE_CASE
+ * 优化依据：使用 const 断言提高类型安全与不可变性
+ * 参考：TypeScript const assertions（Context7: /reactjs/react.dev 相关 TS 教程）
  */
 
 // 间距系统
@@ -310,7 +321,7 @@ export const BREAKPOINTS = {
 **创建 src/components/Button/Button.tsx**:
 
 ```typescript
-import React from 'react';
+import React, { forwardRef } from 'react';
 import { cn } from '@/utils/cn';
 
 export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElement> {
@@ -323,9 +334,10 @@ export interface ButtonProps extends React.ButtonHTMLAttributes<HTMLButtonElemen
 
 /**
  * Button 组件
- * 遵循命名约定：组件名使用 PascalCase
+ * 优化：支持 forwardRef、默认 type="button"、加载态可访问性（aria-busy/role）
+ * 参考：React forwardRef（Context7: /reactjs/react.dev）、jest-dom 可访问性匹配器
  */
-export const Button: React.FC<ButtonProps> = ({
+export const Button = forwardRef<HTMLButtonElement, ButtonProps>(({
   variant = 'primary',
   size = 'md',
   isLoading = false,
@@ -334,44 +346,53 @@ export const Button: React.FC<ButtonProps> = ({
   children,
   className,
   disabled,
+  type = 'button',
   ...props
-}) => {
+}, ref) => {
   const baseStyles = 'inline-flex items-center justify-center rounded-lg font-medium transition-all';
-  
   const variantStyles = {
     primary: 'bg-blue-500 text-white hover:bg-blue-600 active:bg-blue-700',
     secondary: 'bg-white/20 backdrop-blur text-blue-900 hover:bg-white/30',
     ghost: 'bg-transparent text-blue-600 hover:bg-blue-50',
-  };
-  
+  } as const;
   const sizeStyles = {
     sm: 'px-3 py-1.5 text-sm',
     md: 'px-4 py-2 text-base',
     lg: 'px-6 py-3 text-lg',
-  };
+  } as const;
 
   return (
     <button
+      ref={ref}
+      type={type}
       className={cn(
         baseStyles,
         variantStyles[variant],
         sizeStyles[size],
-        disabled && 'opacity-50 cursor-not-allowed',
+        (disabled || isLoading) && 'opacity-50 cursor-not-allowed',
         className
       )}
       disabled={disabled || isLoading}
+      aria-busy={isLoading}
       {...props}
     >
       {isLoading ? (
-        <span className="inline-block w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin mr-2" />
+        // 加载指示器：可访问性 role/status
+        // 参考：Testing Library jest-dom（Context7: /testing-library/jest-dom）
+        <span
+          className="inline-block w-4 h-4 border-2 border-current border-t-transparent rounded-full animate-spin mr-2"
+          role="status"
+          aria-label="loading"
+        />
       ) : leftIcon ? (
-        <span className="mr-2">{leftIcon}</span>
+        <span className="mr-2" aria-hidden="true">{leftIcon}</span>
       ) : null}
       {children}
-      {rightIcon && <span className="ml-2">{rightIcon}</span>}
+      {rightIcon && <span className="ml-2" aria-hidden="true">{rightIcon}</span>}
     </button>
   );
-};
+});
+Button.displayName = 'Button';
 ```
 
 **创建 src/components/Button/index.ts**:
@@ -389,7 +410,8 @@ import { twMerge } from 'tailwind-merge';
 
 /**
  * 合并 Tailwind CSS 类名的工具函数
- * 遵循命名约定：函数名使用 camelCase
+ * 优化依据：tailwind-merge 解决冲突，clsx 处理条件构造
+ * 参考：tailwind-merge Features（Context7: /dcastil/tailwind-merge）、clsx README（Context7: /lukeed/clsx）
  */
 export function cn(...inputs: ClassValue[]) {
   return twMerge(clsx(inputs));
@@ -399,7 +421,7 @@ export function cn(...inputs: ClassValue[]) {
 **安装依赖**:
 
 ```powershell
-npm install clsx tailwind-merge
+cnpm install clsx tailwind-merge
 ```
 
 **验收标准**:
@@ -423,7 +445,7 @@ npm install clsx tailwind-merge
 **创建 src/components/Card/Card.tsx**:
 
 ```typescript
-import React from 'react';
+import React, { forwardRef } from 'react';
 import { cn } from '@/utils/cn';
 
 export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
@@ -434,30 +456,28 @@ export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
 
 /**
  * Card 卡片组件
- * 支持毛玻璃效果和悬停动画
+ * 优化：forwardRef 以便父组件控制焦点与测量；保持类名合并
  */
-export const Card: React.FC<CardProps> = ({
+export const Card = forwardRef<HTMLDivElement, CardProps>(({ 
   variant = 'glass',
   hoverable = true,
   padding = 'md',
   className,
   children,
   ...props
-}) => {
+}, ref) => {
   const baseStyles = 'rounded-2xl transition-all duration-300';
-  
   const variantStyles = {
     default: 'bg-white shadow-card',
     glass: 'bg-white/40 backdrop-blur-md shadow-glass',
     elevated: 'bg-white shadow-elevated',
-  };
-  
+  } as const;
   const paddingStyles = {
     none: '',
     sm: 'p-3',
     md: 'p-4',
     lg: 'p-6',
-  };
+  } as const;
 
   const hoverStyles = hoverable 
     ? 'hover:-translate-y-1 hover:shadow-card-hover cursor-pointer'
@@ -465,6 +485,7 @@ export const Card: React.FC<CardProps> = ({
 
   return (
     <div
+      ref={ref}
       className={cn(
         baseStyles,
         variantStyles[variant],
@@ -477,7 +498,8 @@ export const Card: React.FC<CardProps> = ({
       {children}
     </div>
   );
-};
+});
+Card.displayName = 'Card';
 ```
 
 **创建 src/components/Card/index.ts**:
@@ -507,7 +529,7 @@ export type { CardProps } from './Card';
 
 ```powershell
 # Lucide React - 基于 Context7 验证的真实库
-npm install lucide-react
+cnpm install lucide-react
 ```
 
 **创建 src/components/Icon/Icon.tsx**:
@@ -528,8 +550,9 @@ export interface IconProps {
 }
 
 /**
- * Icon 图标组件
- * 基于 Lucide React 图标库
+ * Icon 图标组件（Lucide）
+ * 优化：默认 aria-hidden，避免无语义图标干扰可访问性；保留类型安全
+ * 参考：Lucide 使用指南（Context7: /lucide-icons/lucide）
  */
 export const Icon: React.FC<IconProps> = ({
   name,
@@ -539,18 +562,14 @@ export const Icon: React.FC<IconProps> = ({
   strokeWidth = 2,
 }) => {
   const IconComponent = LucideIcons[name] as React.ComponentType<any>;
-  
-  if (!IconComponent) {
-    console.warn(`Icon "${name}" not found`);
-    return null;
-  }
-
+  if (!IconComponent) return null;
   return (
     <IconComponent
       size={size}
       color={color}
       strokeWidth={strokeWidth}
       className={cn('inline-block', className)}
+      aria-hidden="true"
     />
   );
 };
@@ -660,7 +679,7 @@ export interface HeaderProps {
 
 /**
  * Header 标题栏组件
- * 包含应用标题和操作按钮
+ * 修复：无效中文类名改为 Tailwind 合法类名；按钮显式 type="button"
  */
 export const Header: React.FC<HeaderProps> = ({
   title = '天气鸭',
@@ -691,6 +710,7 @@ export const Header: React.FC<HeaderProps> = ({
       <div className="flex space-x-2">
         {onRefresh && (
           <button
+            type="button"
             onClick={onRefresh}
             className="flex items-center justify-center w-9 h-9 rounded-full bg-white/20 hover:bg-white/30 transition"
             aria-label="刷新天气"
@@ -701,8 +721,9 @@ export const Header: React.FC<HeaderProps> = ({
         
         {onSettings && (
           <button
+            type="button"
             onClick={onSettings}
-            className="flex items-center justify-center w-9 h-9 rounded-full bg白色/20 hover:bg白色/30 transition"
+            className="flex items-center justify-center w-9 h-9 rounded-full bg-white/20 hover:bg-white/30 transition"
             aria-label="打开设置"
           >
             <Icon name="Settings" size={18} color="white" />
@@ -757,8 +778,6 @@ function App() {
   const handleRefresh = () => {
     setIsRefreshing(true);
     console.log('刷新天气数据...');
-    
-    // 模拟刷新
     setTimeout(() => {
       setIsRefreshing(false);
     }, 1000);
@@ -775,7 +794,7 @@ function App() {
         onSettings={handleSettings}
       />
       
-      <main className="flex-1 overflow-y-auto p-5">
+      <main className="flex-1 overflow-y-auto p-5" aria-live="polite">
         <Card variant="glass" className="mb-5">
           <h2 className="text-xl font-bold text-blue-900 mb-2">
             UI 框架搭建完成
@@ -789,15 +808,16 @@ function App() {
               variant="primary" 
               leftIcon={<Icon name="Cloud" size={18} />}
               isLoading={isRefreshing}
+              type="button"
             >
               刷新天气
             </Button>
             
-            <Button variant="secondary">
+            <Button variant="secondary" type="button">
               次要按钮
             </Button>
             
-            <Button variant="ghost">
+            <Button variant="ghost" type="button">
               幽灵按钮
             </Button>
           </div>
@@ -815,8 +835,9 @@ function App() {
           <Card hoverable>
             <div className="text-center">
               <Icon name="Wind" size={32} color="#3b82f6" />
-              <div className="mt-2 text-sm text蓝色-600">风速</div>
-              <div className="text-xl font-bold text蓝色-900">18km/h</div>
+              {/* 修复：Tailwind 类名必须使用合法英文 */}
+              <div className="mt-2 text-sm text-blue-600">风速</div>
+              <div className="text-xl font-bold text-blue-900">18km/h</div>
             </div>
           </Card>
         </div>
@@ -850,7 +871,7 @@ export default App;
 **安装测试依赖**:
 
 ```powershell
-npm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom
+cnpm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom ; cnpm install -D @testing-library/dom
 ```
 
 **创建测试配置 vitest.config.ts**:
@@ -866,6 +887,13 @@ export default defineConfig({
     environment: 'jsdom',
     setupFiles: ['./src/test/setup.ts'],
     globals: true,
+    // 优化依据：启用覆盖率并配置报告目录
+    // 参考：Vitest Coverage（Context7: /vitest-dev/vitest）
+    coverage: {
+      provider: 'v8',
+      reporter: ['text', 'html'],
+      reportsDirectory: './coverage',
+    },
   },
   resolve: {
     alias: {
@@ -898,10 +926,8 @@ describe('Button', () => {
   it('should call onClick when clicked', async () => {
     const handleClick = vi.fn();
     const user = userEvent.setup();
-    
     render(<Button onClick={handleClick}>Click me</Button>);
-    
-    await user.click(screen.getByText('Click me'));
+    await user.click(screen.getByRole('button'));
     expect(handleClick).toHaveBeenCalledOnce();
   });
 
@@ -910,9 +936,13 @@ describe('Button', () => {
     expect(screen.getByRole('button')).toBeDisabled();
   });
 
-  it('should show loading state', () => {
+  it('should show loading state with aria-busy and spinner', () => {
     render(<Button isLoading>Click me</Button>);
-    expect(screen.getByRole('button')).toBeDisabled();
+    const btn = screen.getByRole('button');
+    expect(btn).toBeDisabled();
+    expect(btn).toHaveAttribute('aria-busy', 'true');
+    // 参考：user-event 推荐使用异步 API & jest-dom 匹配器
+    expect(screen.getByRole('status')).toBeInTheDocument();
   });
 });
 ```
