feat: 添加主题切换组件和设计令牌规范
refactor: 重构组件使用设计令牌替代硬编码样式
docs: 添加响应式设计、主题API和设计令牌规范文档
test: 移动组件测试到统一测试目录并更新快照
ci: 添加ESLint规则检查设计令牌使用
build: 更新项目依赖和初始化文档版本记录

--- a/开发指导/01-项目初始化指南.md
+++ b/开发指导/01-项目初始化指南.md
@@ -1,5 +1,11 @@
 # 天气鸭项目开发指导 - 阶段1：项目初始化
 
+## 🛠 修订记录
+- 文档版本：v1.2
+- 更新日期：2025-11-13
+- 维护团队：天气鸭开发团队
+- 变更说明：与阶段2最新规范保持一致，统一采用 Tailwind CSS 与设计令牌体系；安装命令统一为 `cnpm`（如无 `cnpm` 可用 `npm`）；同步测试栈与目录规范。
+
 ## 📋 阶段概述
 
 本阶段将完成项目的基础环境搭建、技术栈初始化和开发规范配置，为后续开发工作奠定坚实基础。
@@ -168,19 +174,14 @@ Windows Desktop Clock Utility/
 npm init -y
 
 # 2. 安装核心依赖（基于技术方案验证的真实库）
-npm install react@18 react-dom@18
-npm install electron@28
+cnpm install react@18 react-dom@18 ; cnpm install electron@28
 
 # 3. 安装开发依赖
-npm install -D vite@5
-npm install -D @vitejs/plugin-react
-npm install -D typescript@5
-npm install -D @types/react @types/react-dom
-npm install -D @types/node
+cnpm install -D vite@5 ; cnpm install -D @vitejs/plugin-react
+cnpm install -D typescript@5 ; cnpm install -D @types/react @types/react-dom ; cnpm install -D @types/node
 
 # 4. 安装 Electron 构建工具
-npm install -D electron-builder
-npm install -D electron-vite
+cnpm install -D electron-builder ; cnpm install -D electron-vite
 ```
 
 **package.json 配置** (遵循 `.qoder/rules/workflow-spec.zh-CN.md` - [规则 2] 版本号管理，第49行):
@@ -552,37 +553,22 @@ export default App;
 **创建 src/index.css**:
 
 ```css
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  * { @apply box-border; }
+  body {
+    @apply min-h-screen flex justify-center items-center font-sans;
+    @apply bg-gradient-to-br from-slate-100 to-indigo-100;
+  }
 }
 
-body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
-  background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.app-container {
-  text-align: center;
-  padding: 2rem;
-  background: rgba(255, 255, 255, 0.9);
-  border-radius: 16px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-}
-
-h1 {
-  color: #2563eb;
-  font-size: 2rem;
-  margin-bottom: 0.5rem;
-}
-
-p {
-  color: #64748b;
+@layer components {
+  .app-container {
+    @apply text-center p-8 bg-white/90 rounded-2xl shadow-2xl;
+  }
 }
 ```
 
@@ -755,7 +741,7 @@ npm install
 cnpm install -D tailwindcss@3 postcss autoprefixer ; npx tailwindcss init -p
 cnpm install clsx tailwind-merge
 cnpm install lucide-react
-cnpm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom
+cnpm install -D vitest @testing-library/react @testing-library/jest-dom @testing-library/user-event jsdom ; cnpm install -D @testing-library/dom
 ```
 
 **新增/更新文件**:
@@ -772,6 +758,18 @@ npm run typecheck ; npm run lint ; npm run test ; npm run dev:web
 
 **说明**:
 - 以上安装命令使用 `cnpm`，其余运行脚本与阶段1保持一致；如本机未安装 `cnpm`，请先安装或切换为 `npm`
+
+---
+
+**文档版本**: v1.2  
+**更新日期**: 2025-11-13  
+**维护团队**: 天气鸭开发团队  
+**修改人**: Trae Code Assistant
+
+**版本历史**:
+- v1.2 (2025-11-13): 同步阶段1与阶段2最新规范，采用 Tailwind CSS；统一依赖安装为 cnpm；更新基础样式文件为 Tailwind 指令；保持测试与目录规范一致
+- v1.1 (2025-11-13): 新增“步骤 1.10”，统一安装命令为 cnpm，补充测试依赖 @testing-library/dom；完善验证命令
+- v1.0 (2024-01-01): 初始版本
 
 ---
 
